--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,6 @@ sudo: false
 language: ruby
 rvm:
   - 2.2.9
-before_install: gem install bundler -v 1.17.2
+before_install:
+  - gem install bundler -v 1.17.2
+  - bin/setup
