--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,10 @@ gemfile:
   - gemfiles/rails_5.1.gemfile
   - gemfiles/rails_5.2.gemfile
   - gemfiles/rails_6.0.gemfile
+jobs:
+  exclude:
+  - rvm: 2.4
+    gemfile: gemfiles/rails_6.0.gemfile
 before_install:
   - gem install bundler -v 1.17.2
   - bin/setup
