--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,9 @@ gemfile:
 jobs:
   exclude: # Unsupported combos: https://www.fastruby.io/blog/ruby/rails/versions/compatibility-table.html
   - rvm: 3.0
-    gemfiles/rails_5.1.gemfile
+    gemfile: gemfiles/rails_5.1.gemfile
   - rvm: 3.0
-    gemfiles/rails_5.2.gemfile
+    gemfile: gemfiles/rails_5.2.gemfile
 
 before_install:
   - bin/setup
