--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,18 +9,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby:
-          - '3.0'
-          - '2.7'
-          - '2.6'
-          - '2.5'
-        rails:
-          - '5.1'
-          - '5.2'
-          - '6.0'
-          - '6.1'
-          - '7.0'
+        ruby: ['3.1', '3.0', '2.7', '2.6', '2.5']
+        rails: ['5.1', '5.2', '6.0', '6.1', '7.0']
         exclude:
+          - ruby: '3.1'
+            rails: '5.1'
+          - ruby: '3.1'
+            rails: '5.2'
           - ruby: '3.1'
             rails: '6.0'
           - ruby: '3.1'
