--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,9 +9,17 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby: ['3.1', '3.0', '2.7', '2.6', '2.5']
+        ruby: ['3.2', '3.1', '3.0', '2.7', '2.6', '2.5']
         rails: ['5.1', '5.2', '6.0', '6.1', '7.0']
         exclude:
+          - ruby: '3.2'
+            rails: '5.1'
+          - ruby: '3.2'
+            rails: '5.2'
+          - ruby: '3.2'
+            rails: '6.0'
+          - ruby: '3.2'
+            rails: '6.1'
           - ruby: '3.1'
             rails: '5.1'
           - ruby: '3.1'
@@ -29,7 +37,7 @@ jobs:
     env: # $BUNDLE_GEMFILE must be set at the job level, so it is set for all steps
       BUNDLE_GEMFILE: gemfiles/rails_${{ matrix.rails }}.gemfile
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Set up Ruby ${{ matrix.ruby }}
         uses: ruby/setup-ruby@v1
         with:
