--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
       fail-fast: false
       matrix:
         ruby: ['3.2', '3.1', '3.0', '2.7', '2.6', '2.5']
-        rails: ['5.1', '5.2', '6.0', '6.1', '7.0']
+        rails: ['5.1', '5.2', '6.0', '6.1', '7.0', 'main']
         exclude:
           - ruby: '3.2'
             rails: '5.1'
@@ -34,6 +34,14 @@ jobs:
             rails: '7.0'
           - ruby: '2.5'
             rails: '7.0'
+          - ruby: '3.0'
+            rails: 'main'
+          - ruby: '2.7'
+            rails: 'main'
+          - ruby: '2.6'
+            rails: 'main'
+          - ruby: '2.5'
+            rails: 'main'
     env: # $BUNDLE_GEMFILE must be set at the job level, so it is set for all steps
       BUNDLE_GEMFILE: gemfiles/rails_${{ matrix.rails }}.gemfile
     steps:
