--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
       fail-fast: false
       matrix:
         ruby: ['3.2', '3.1', '3.0', '2.7', '2.6', '2.5']
-        rails: ['5.1', '5.2', '6.0', '6.1', '7.0']
+        rails: ['5.1', '5.2', '6.0', '6.1', '7.0', '7.1']
         exclude:
           - ruby: '3.2'
             rails: '5.1'
@@ -34,6 +34,10 @@ jobs:
             rails: '7.0'
           - ruby: '2.5'
             rails: '7.0'
+          - ruby: '2.6'
+            rails: '7.1'
+          - ruby: '2.5'
+            rails: '7.1'
     env: # $BUNDLE_GEMFILE must be set at the job level, so it is set for all steps
       BUNDLE_GEMFILE: gemfiles/rails_${{ matrix.rails }}.gemfile
     steps:
@@ -43,6 +47,8 @@ jobs:
         with:
           ruby-version: ${{ matrix.ruby }}
           bundler-cache: true # 'bundle install' and cache
+      - name: Upgrade rubygems
+        run: gem upgrade --system
       - name: Copy config file
         run: cp spec/support/sample.config.yml spec/support/config.yml
       - name: Run tests
