--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,8 @@ jobs:
         with:
           ruby-version: ${{ matrix.ruby }}
           bundler-cache: true # 'bundle install' and cache
+      - name: Upgrade rubygems
+        run: gem update --system
       - name: Copy config file
         run: cp spec/support/sample.config.yml spec/support/config.yml
       - name: Run tests
