--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,10 @@ jobs:
             rails: '7.0'
           - ruby: '2.5'
             rails: '7.0'
+          - ruby: '2.5'
+            rails: '7.1'
+          - ruby: '2.6'
+            rails: '7.1'
     env: # $BUNDLE_GEMFILE must be set at the job level, so it is set for all steps
       BUNDLE_GEMFILE: gemfiles/rails_${{ matrix.rails }}.gemfile
     steps:
