--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,7 @@ jobs:
       matrix:
         ruby: ['3.2', '3.1', '3.0', '2.7', '2.6', '2.5']
         rails: ['5.1', '5.2', '6.0', '6.1', '7.0', '7.1']
+        rubygems: latest
         exclude:
           - ruby: '3.2'
             rails: '5.1'
@@ -47,9 +48,6 @@ jobs:
         with:
           ruby-version: ${{ matrix.ruby }}
           bundler-cache: true # 'bundle install' and cache
-      - name: Upgrade rubygems
-        run: gem update --system
-        if: ${{ matrix.ruby == '7.1' }}
       - name: Copy config file
         run: cp spec/support/sample.config.yml spec/support/config.yml
       - name: Run tests
