--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
       matrix:
         ruby: ['3.2', '3.1', '3.0', '2.7', '2.6', '2.5']
         rails: ['5.1', '5.2', '6.0', '6.1', '7.0', '7.1']
-        rubygems: latest
+        rubygems: 3.3.13
         exclude:
           - ruby: '3.2'
             rails: '5.1'
