--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,6 @@ jobs:
       matrix:
         ruby: ['3.2', '3.1', '3.0', '2.7', '2.6', '2.5']
         rails: ['5.1', '5.2', '6.0', '6.1', '7.0', '7.1']
-        rubygems: 3.3.13
         exclude:
           - ruby: '3.2'
             rails: '5.1'
@@ -48,6 +47,7 @@ jobs:
         with:
           ruby-version: ${{ matrix.ruby }}
           bundler-cache: true # 'bundle install' and cache
+          rubygems: latest
       - name: Copy config file
         run: cp spec/support/sample.config.yml spec/support/config.yml
       - name: Run tests
