--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,17 +44,10 @@ jobs:
       - uses: actions/checkout@v3
       - name: Set up Ruby ${{ matrix.ruby }}
         uses: ruby/setup-ruby@v1
-        if: matrix.ruby == '2.5'
         with:
           ruby-version: ${{ matrix.ruby }}
           bundler-cache: true # 'bundle install' and cache
-      - name: Set up Ruby ${{ matrix.ruby }}
-        uses: ruby/setup-ruby@v1
-        if: matrix.ruby != '2.5'
-        with:
-          ruby-version: ${{ matrix.ruby }}
-          bundler-cache: true # 'bundle install' and cache
-          rubygems: latest
+          rubygems: ${{ matrix.ruby == '2.5' && 'default' || 'latest' }}
       - name: Copy config file
         run: cp spec/support/sample.config.yml spec/support/config.yml
       - name: Run tests
