--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,8 +9,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby: ['3.3', '3.2', '3.1', '3.0', '2.7', '2.6', '2.5']
-        rails: ['5.1', '5.2', '6.0', '6.1', '7.0', '7.1', '7.2']
+        ruby: ['3.3', '3.2', '3.1']
+        rails: ['6.1', '7.0', '7.1', '7.2']
         channel: ['stable']
 
         include:
@@ -39,52 +39,9 @@ jobs:
             rails: '7.0' # TODO: works on 7-0-stable branch, remove after a 7.0.x patch release
           - ruby: '3.3'
             rails: '6.1'
-          - ruby: '3.3'
-            rails: '6.0'
-          - ruby: '3.3'
-            rails: '5.2'
-          - ruby: '3.3'
-            rails: '5.1'
 
           - ruby: '3.2'
             rails: '6.1'
-          - ruby: '3.2'
-            rails: '6.0'
-          - ruby: '3.2'
-            rails: '5.2'
-          - ruby: '3.2'
-            rails: '5.1'
-
-          - ruby: '3.1'
-            rails: '6.0'
-          - ruby: '3.1'
-            rails: '5.2'
-          - ruby: '3.1'
-            rails: '5.1'
-
-          - ruby: '3.0'
-            rails: '7.2'
-          - ruby: '3.0'
-            rails: '5.2'
-          - ruby: '3.0'
-            rails: '5.1'
-
-          - ruby: '2.7'
-            rails: '7.2'
-
-          - ruby: '2.6'
-            rails: '7.2'
-          - ruby: '2.6'
-            rails: '7.1'
-          - ruby: '2.6'
-            rails: '7.0'
-
-          - ruby: '2.5'
-            rails: '7.2'
-          - ruby: '2.5'
-            rails: '7.1'
-          - ruby: '2.5'
-            rails: '7.0'
 
     continue-on-error: ${{ matrix.channel != 'stable' }}
 
