--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,44 +4,94 @@ on: [push, pull_request]
 
 jobs:
   test:
-    name: 'Ruby: ${{ matrix.ruby }}, Rails: ${{ matrix.rails }}'
+    name: 'Ruby: ${{ matrix.ruby }}, Rails: ${{ matrix.rails }}, Channel: ${{ matrix.channel }}'
     runs-on: 'ubuntu-22.04'
     strategy:
       fail-fast: false
       matrix:
-        ruby: ['3.2', '3.1', '3.0', '2.7', '2.6', '2.5']
-        rails: ['5.1', '5.2', '6.0', '6.1', '7.0', '7.1']
+        ruby: ['3.3', '3.2', '3.1', '3.0', '2.7', '2.6', '2.5']
+        rails: ['5.1', '5.2', '6.0', '6.1', '7.0', '7.1', '7.2']
+        channel: ['stable']
+
+        include:
+          - ruby: 'ruby-head'
+            rails: 'edge'
+            channel: 'experimental'
+          - ruby: 'ruby-head'
+            rails: '7.2'
+            channel: 'experimental'
+          - ruby: 'ruby-head'
+            rails: '7.1'
+            channel: 'experimental'
+
+          - ruby: '3.3'
+            rails: 'edge'
+            channel: 'experimental'
+          - ruby: '3.2'
+            rails: 'edge'
+            channel: 'experimental'
+          - ruby: '3.1'
+            rails: 'edge'
+            channel: 'experimental'
+
         exclude:
-          - ruby: '3.2'
-            rails: '5.1'
-          - ruby: '3.2'
-            rails: '5.2'
-          - ruby: '3.2'
+          - ruby: '3.3'
+            rails: '7.0' # TODO: works on 7-0-stable branch, remove after a 7.0.x patch release
+          - ruby: '3.3'
+            rails: '6.1'
+          - ruby: '3.3'
             rails: '6.0'
+          - ruby: '3.3'
+            rails: '5.2'
+          - ruby: '3.3'
+            rails: '5.1'
+
           - ruby: '3.2'
             rails: '6.1'
-          - ruby: '3.1'
-            rails: '5.1'
-          - ruby: '3.1'
+          - ruby: '3.2'
+            rails: '6.0'
+          - ruby: '3.2'
             rails: '5.2'
+          - ruby: '3.2'
+            rails: '5.1'
+
           - ruby: '3.1'
             rails: '6.0'
-          - ruby: '3.0'
+          - ruby: '3.1'
+            rails: '5.2'
+          - ruby: '3.1'
             rails: '5.1'
+
+          - ruby: '3.0'
+            rails: '7.2'
           - ruby: '3.0'
             rails: '5.2'
+          - ruby: '3.0'
+            rails: '5.1'
+
+          - ruby: '2.7'
+            rails: '7.2'
+
           - ruby: '2.6'
-            rails: '7.0'
-          - ruby: '2.5'
-            rails: '7.0'
-          - ruby: '2.5'
+            rails: '7.2'
+          - ruby: '2.6'
             rails: '7.1'
           - ruby: '2.6'
+            rails: '7.0'
+
+          - ruby: '2.5'
+            rails: '7.2'
+          - ruby: '2.5'
             rails: '7.1'
+          - ruby: '2.5'
+            rails: '7.0'
+
+    continue-on-error: ${{ matrix.channel != 'stable' }}
+
     env: # $BUNDLE_GEMFILE must be set at the job level, so it is set for all steps
       BUNDLE_GEMFILE: gemfiles/rails_${{ matrix.rails }}.gemfile
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Set up Ruby ${{ matrix.ruby }}
         uses: ruby/setup-ruby@v1
         with:
