Use older mysql to avoid trilogy error, fix docker compose and instructions, mount code for easier development

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,26 +3,23 @@ services:
     image: postgres:16 # specify the version needed for a given app
     environment:
       - POSTGRES_PASSWORD=postgres # this is required
-    ports:
-      - "127.0.0.1:5432:5432" # so we can use `localhost` as the host
   mysql:
-    image: mysql:9.3
+    image: mysql:5.7
     environment:
       - MYSQL_ROOT_PASSWORD=mysql
-    ports:
-      - "127.0.0.1:3306:3306"
   redis:
     image: redis:6.2-alpine
     restart: always
-    ports:
-      - "127.0.0.1:6379:6379"
     command: redis-server --save 20 1 --loglevel warning
   ruby:
-    image: ruby:3.3 # Manually change this based on the desired Ruby version
-    working_dir: /app
-    build: .
-    environment:
-      BUNDLE_GEMFILE: gemfiles/rails_7.2.gemfile # Manually change this based on the desired Rails version
+    build:
+      context: .
+      args:
+        BUNDLE_GEMFILE: gemfiles/rails_7.2.gemfile # Manually change this based on the desired Rails version
+        RUBY_VERSION: 3.3 # Manually change this based on the desired Ruby version
+    volumes:
+      - ".:/app:delegated"
+    command: rake
     depends_on:
       - mysql
       - postgres
