--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,13 +9,16 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby: ['3.3', '3.2', '3.1']
-        rails: ['6.1', '7.0', '7.1', '7.2']
+        ruby: ['3.4', '3.3', '3.2', '3.1']
+        rails: ['6.1', '7.0', '7.1', '7.2', '8.0']
         channel: ['stable']
 
         include:
           - ruby: 'ruby-head'
             rails: 'edge'
+            channel: 'experimental'
+          - ruby: 'ruby-head'
+            rails: '8.0'
             channel: 'experimental'
           - ruby: 'ruby-head'
             rails: '7.2'
@@ -24,24 +27,28 @@ jobs:
             rails: '7.1'
             channel: 'experimental'
 
+          - ruby: '3.4'
+            rails: 'edge'
+            channel: 'experimental'
           - ruby: '3.3'
             rails: 'edge'
             channel: 'experimental'
           - ruby: '3.2'
-            rails: 'edge'
-            channel: 'experimental'
-          - ruby: '3.1'
             rails: 'edge'
             channel: 'experimental'
 
         exclude:
-          - ruby: '3.3'
-            rails: '7.0' # TODO: works on 7-0-stable branch, remove after a 7.0.x patch release
+          - ruby: '3.4'
+            rails: '6.1'
+
           - ruby: '3.3'
             rails: '6.1'
 
           - ruby: '3.2'
             rails: '6.1'
+
+          - ruby: '3.1'
+            rails: '8.0'
 
     continue-on-error: ${{ matrix.channel != 'stable' }}
 
